jwt auth setup done